--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <footer>
     <main class="flex spaceCenter">
-        <h6>&copy; 2021 Gemcode { by Reinaldo Nunes }</h6>
+        <figure>
+            <img src="/assets/img/logo-gh-mini.png" alt="GitHub Reinaldo Nunes" title="GitHub Reinaldo Nunes" />
+        </figure>
     </main>
 </footer>
