Fix bug on url dependences

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <header class="alignItems flex">
     <main class="flex flexColumn alignItems spaceCenter">
         <figure>
-            <img src="/assets/img/logo-gh.png" alt="GitHub Reinaldo Nunes" title="GitHub Reinaldo Nunes" />
+            <img src="assets/img/logo-gh.png" alt="GitHub Reinaldo Nunes" title="GitHub Reinaldo Nunes" />
         </figure>
         <h1>Olá, conheça alguns dos meus projetos e artigos no <strong>GitHub</strong></h1>
         <a href="https://github.com/reinaldonunes/" target="_blank" class="button">Ir para repositórios</a>
 
         <figure class="gh-image">
-            <img src="/assets/img/gh-repos.png" alt="Repositórios Github" title="Repositórios Github" />
+            <img src="assets/img/gh-repos.png" alt="Repositórios Github" title="Repositórios Github" />
         </figure>
     </main>
 </header>
