--- a/_includes/metadatas.html
+++ b/_includes/metadatas.html
@@ -5,6 +5,6 @@
 <meta name="description" content="Jekyll static blog with Ruby" />
 <meta name="keywords" content="jekyll, static, github, blog, ruby, html, css, javascript" />
 <meta name="robots" content="index, follow">
-<link rel="icon" href="/assets/img/favicon.png" type="image/png">
-<link rel="stylesheet" href="/assets/css/default.css" type="text/css" media="screen">
+<link rel="icon" href="assets/img/favicon.png" type="image/png">
+<link rel="stylesheet" href="assets/css/default.css" type="text/css" media="screen">
 <script type="text/javascript" src="http://livejs.com/live.js"></script>
